--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,6 +12,6 @@ pool:
 stages:
 - template: azure-pipelines/pr-validation-build.yml
 - template: azure-pipelines/build.yml
-# - template: azure-pipelines/production.yml
+- template: azure-pipelines/production.yml
 
 ...
