--- a/src/Line.Notify.Api.Client/Line.Notify.Api.Client.csproj
+++ b/src/Line.Notify.Api.Client/Line.Notify.Api.Client.csproj
@@ -3,6 +3,14 @@
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+	<PackageId>Line.Notify.Api.Client</PackageId>
+    <Description>A nuget package for LINE Notify Api client using .NET6</Description>
+    <PackageTags>LINE;notify;sns;social;messaging;messagner</PackageTags>
+    <PackageLicenseFile>LICENSE</PackageLicenseFile>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
+    <PublishRepositoryUrl>true</PublishRepositoryUrl>
+    <RepositoryUrl>https://github.com/ed555009/alchemy-notify-api-client.git</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
     <IncludeSymbols>true</IncludeSymbols>
     <SymbolPackageFormat>snupkg</SymbolPackageFormat>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
