--- a/src/Line.Notify.Api.Client/Line.Notify.Api.Client.csproj
+++ b/src/Line.Notify.Api.Client/Line.Notify.Api.Client.csproj
@@ -17,6 +17,8 @@
     <NoWarn>$(NoWarn);1591</NoWarn>
   </PropertyGroup>
   <ItemGroup>
+    <None Include="../../README.md" Pack="true" PackagePath="" />
+    <None Include="../../LICENSE" Pack="true" PackagePath="" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="7.0.2" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.1" />
     <PackageReference Include="Refit" Version="6.3.2" />
